remove overflow: hidden from text field (fix font size)

--- a/app/assets/stylesheets/card_maker/card_editor.scss
+++ b/app/assets/stylesheets/card_maker/card_editor.scss
@@ -17,7 +17,6 @@ $color-btn-width: 70px;
   flex-wrap: wrap;
   justify-content: center;
   height: 77px;
-  overflow: hidden;
 }
 
 .lTextInput {
